# virtual-makeup

./: .gitignore  README.md
images/: readme.txt
src/: CMakeLists.txt  abstractboxdetector.h  abstractimagefilter.cpp  abstractimagefilter.h  abstractlandmarkdetector.h  eyecolorfilter.cpp  eyecolorfilter.h  faciallandmarkdetector.cpp  faciallandmarkdetector.h  faciallandmarkfilter.cpp  faciallandmarkfilter.h  lipstickcolorfilter.cpp  lipstickcolorfilter.h  main.cpp
